customResponses added Tests added for customResponses closes #11
